Refactor methods and improve validation logic across backend services and tests
Simplified method signatures for clarity and reduced redundancy. Replaced list indexing with `getFirst()` for better readability and null safety. Enhanced validation logic with additional checks for existing product variants and removed unnecessary annotations in tests.